# iamine

./: .gitignore  Cargo.toml  LICENSE  MILESTONE_CLOSEOUT_CHECKLIST.md  README.md
.github/: pull_request_template.md
.github/workflows/: quality-gate.yml
client-rust/: Cargo.toml
client-rust/src/: main.rs  solana_client.rs  solana_config.rs
contracts-solana/: Cargo.toml
docs/: whitepaper.md
docs/architecture/: architecture-cleanup-checkpoint-002.md  architecture-cleanup-checkpoint-a.md  (+5 more)
iamine-core/: Cargo.toml
iamine-models/: Cargo.toml
iamine-models/src/: continuation_manager.rs  distributed_inference.rs  hardware_acceleration.rs  huggingface_search.rs  inference.rs  inference_engine.rs  inference_queue.rs  lib.rs  model_auto_provision.rs  model_cache.rs  model_downloader.rs  model_events.rs  model_installer.rs  model_registry.rs  model_requirements.rs  model_selector.rs  model_signature.rs  model_storage.rs  model_validator.rs  model_verifier.rs  node_capabilities.rs  node_models.rs  output_cleaner.rs  output_normalizer.rs  output_validator.rs  prompt_builder.rs  signed_metrics.rs  storage_config.rs
iamine-models/tests/: integration.rs
iamine-models/tests/integration/: capabilities.rs  common.rs  distributed_inference.rs  download_validation.rs  inference_engine.rs  registry.rs  storage.rs
iamine-network/: Cargo.toml
iamine-node/: Cargo.toml
iamine-node/src/: attempt_watchdog.rs  backend_config.rs  backend_policy.rs  backend_runtime.rs  benchmark.rs  broadcast_observability.rs  broadcast_protocol.rs  broadcast_runtime.rs  broadcast_state.rs  broadcast_worker.rs  capability_advertising.rs  capability_display.rs  cli.rs  cli_mode_handlers.rs  cluster_cli.rs  cluster_events.rs  cluster_health.rs  cluster_readiness.rs  cluster_registry.rs  cluster_status.rs  cluster_stress.rs  cluster_stress_cli.rs  cluster_stress_metrics.rs  cluster_stress_validation.rs  code_quality.rs  config_test_utils.rs  controller_broadcast_runtime.rs  controller_cluster_runtime.rs  controller_result_runtime.rs  cpu_feature_guard.rs  daemon_runtime.rs  discovery_runtime.rs  dispatch_runtime.rs  distributed_infer_runtime.rs  distributed_stability.rs  env_config.rs  event_loop_control.rs  executor.rs  final_outcome.rs  gossipsub_handlers.rs  (+88 more)
iamine-node/src/dispatch_runtime/: mod.rs  observability.rs  readiness.rs  worker_pipeline.rs
iamine-node/src/distributed_infer_runtime/: dispatch_phase.rs  mod.rs  timeout_phase.rs
iamine-node/src/request_response_handlers/: mod.rs  request_path.rs  response_path.rs
iamine-node/src/startup_bootstrap/: core_state.rs  mod.rs  model_state.rs  runtime_services.rs
iamine-node/src/tests/: backend_and_capabilities.rs  cli_and_prompt.rs  dispatch.rs  lifecycle.rs  metrics_and_fallback.rs  mod.rs  startup_math.rs  watchdog.rs
scripts/: quality-gate.sh
tests/: semantic_dataset.json
version_test_suite/: v0.6.1.txt  v0.6.10.txt  v0.6.11.txt  v0.6.12.txt  v0.6.13.txt  v0.6.14.txt  v0.6.15.txt  v0.6.16.txt  v0.6.17.txt  v0.6.18.txt  v0.6.19.txt  v0.6.2.txt  v0.6.20.txt  v0.6.21.txt  v0.6.22.txt  v0.6.23.txt  v0.6.24.txt  v0.6.25.txt  v0.6.26.txt  v0.6.27.txt  v0.6.28.txt  v0.6.29.txt  v0.6.3.txt  v0.6.30.txt  v0.6.31.txt  v0.6.32.txt  v0.6.33.txt  v0.6.34.txt  v0.6.35.txt  v0.6.36.txt  v0.6.4.txt  v0.6.5.txt  v0.6.6.txt  v0.6.7.txt  v0.6.8.txt  v0.6.9.txt
(+45 files in other folders)
