[package]
name = "iamine-models"
version = "0.1.0"
edition = "2021"

[dependencies]
iamine-core = { path = "../iamine-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
urlencoding = "2"
futures = "0.3"
hex = "0.4"
thiserror = "1.0"
libp2p = { version = "0.53", features = ["identify"] }
bytes = "1"
encoding_rs = "0.8"
llama-cpp-2 = { version = "0.1.138", features = ["metal"] }

[features]
default = []
real-inference = []

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"

[[test]]
name = "integration"
path = "tests/integration.rs"
