[package]
name = "iamine-node"
version = "0.1.0"
edition = "2021"

[dependencies]
iamine-core = { path = "../iamine-core" }
libp2p = { version = "0.53", features = [
    "tcp", "noise", "yamux", "tokio",
    "identify", "ping", "macros",
    "request-response", "cbor",
    "kad", "mdns", "gossipsub",
] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
async-trait = "0.1"
warp = "0.3"          # ← para metrics endpoint
dirs = "5.0"        # ← nuevo: para ~/.iamine
